<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/action_account"
            android:icon="@drawable/ic_account"
            android:orderInCategory="100"
            android:title="@string/label_switch_account"
            app:showAsAction="always" />
    <item
            android:id="@+id/action_show_categories"
            android:icon="@drawable/ic_category"
            android:orderInCategory="101"
            android:title="@string/label_show_catories"
            app:showAsAction="always" />
    <item
            android:id="@+id/action_complete_all_task"
            android:icon="@drawable/ic_done_all_white"
            android:orderInCategory="102"
            android:title="@string/label_mark_all_as_complete"
            app:showAsAction="always" />

    <item
            android:id="@+id/action_clear_completed_task"
            android:icon="@drawable/ic_clear_all"
            android:orderInCategory="103"
            android:title="@string/label_clear_completed_task"
            app:showAsAction="always" />
</menu>