<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".app.ui.main.TaskFragment">

    <com.serhatyurdakul.todo.app.ui.main.holder.HorizontalFavoringNestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                    android:id="@+id/swipe_refresh"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                    <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rv_todo_list"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:clipToPadding="false"
                            android:visibility="visible"
                            /></LinearLayout>
            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.serhatyurdakul.todo.app.ui.main.holder.HorizontalFavoringNestedScrollView>

    <ImageView
            android:id="@+id/img_no_data"
            android:layout_width="180dp"
            android:layout_height="228dp"
            android:layout_gravity="center"
            android:contentDescription="@string/description_ic_no_data"
            android:visibility="visible"
            app:srcCompat="@drawable/ic_logo"
            android:paddingBottom="48dp"/>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:orientation="horizontal"
            android:paddingBottom="88dp">

        <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_add_todo"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="16dp"
                android:text="@string/label_add_todo"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:backgroundTint="@color/colorPrimary"
                app:cornerRadius="32dp"
                app:icon="@drawable/ic_add" />

        <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_add_category"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="16dp"
                android:text="@string/label_add_category"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:backgroundTint="@color/colorAccent"
                app:cornerRadius="32dp"
                app:icon="@drawable/ic_add" />
    </LinearLayout>
</FrameLayout>